# Natural-Language-to-SQL

./: .gitignore  DOCKER.md  docker-compose.yml  start.sh
backend/: .dockerignore  .env.example  README.md
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
chat-app/: .dockerignore  .env  .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
chat-app/src/: index.css
chat-app/src/components/Artifact/: ArtifactChart.tsx  ArtifactPanel.tsx  ArtifactTable.tsx
chat-app/src/components/Chat/: ChatArea.tsx  MessageBubble.tsx  MessageList.tsx  TypingIndicator.tsx
chat-app/src/hooks/: useAutoScroll.ts  useChat.ts
chat-app/src/services/: api.ts  backend-api.ts
chat-app/src/types/: index.ts
rag-service/: Dockerfile  main.py  requirements.txt
test_app_backend/: Cargo.toml  Dockerfile
test_app_backend/src/: db.rs  error.rs  main.rs  models.rs
test_app_backend/src/routes/: categories.rs  clients.rs  dashboard.rs  employees.rs  locations.rs  maintenance.rs  mod.rs  payments.rs  reservations.rs  reviews.rs  sql.rs  vehicles.rs
test_app_db/: init_db.sh
test_app_db/init/: 02_seed_data.sql  03_readonly_user.sql
test_app_db/tests/: run_all.sh
test_app_front/: index.html  nginx.conf
test_app_front/css/: style.css
test_app_front/js/: api.js  app.js  dashboard.js  sql.js  table.js
test_db/: init_db.sh
test_db/init/: 01_schema.sql  02_seed_data.sql
test_db/tests/: 01_test_schema.sql  02_test_constraints.sql  03_test_data_quality.sql  04_test_complex_queries.sql  run_all.sh
(+4 files in other folders)
